* add Windows support for accessing memory device
* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Deployment
* add macosx files

Test:
* add autoconf/make test suite

20140406
* updated to include header

20140323
* added read/write at offset functions
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131210
* updated dependencies
* added libcthreads

20130901
* code clean up

20130416
* updated dependencies
* fixes for build by some versions of mingw

20130407
* updated dependencies
* textual changes

20130331
* added debug code files

20130330
* code clean up
* removed libcsplit and libcpath

20130329
* worked on libcfile refactor
* removed libsmdev_legacy

20130328
* added smdevinfo
* worked on libcfile refactor

20130327
* 2013 update
* updated dependencies
* changes for project move
* changes for libcdata
* updated msvscpp files
* fixes in pc and spec files
* worked on libcfile refactor

20121217
* updated dependencies

20120715
* changes for updates

20120630
* updated dependencies
* changed codepage functions in support to use libclocale

20120212
* updated libnotify

20120102
* 2012 update
* added windows codepage 932 and 936 support

20111231
* updated libcstring, libuna
* updated msvscpp files

20111224
* updated libcstring, libuna
* updated array type, list type, offset list
* code clean up

20111030
* updated configure.ac and m4 files

20111008
* updated configure.ac and m4 files
* updated common
* updated libuna
* fix for inclusion of last lead out in optical disk session

20111006
* fix for MacOS-X
* updated configure.ac and m4 files

20110906
* worked on session support

20110905
* worked on session support

20110904
* fix for missing last character
* reduced SCSI and USB ioctl timeout to 1 sec