@@ -37,6 +37,10 @@ Deployment
 Test:
 * add autoconf/make test suite
 
+20140428
+* worked on Python bindings
+* added DIOCGSECTORSIZE support for FreeBSD
+
 20140406
 * updated to include header
 
